--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
      <a class="about" href="{{ i.url | prepend: site.baseurl }}">{{ i.ref }}</a><br />
     {% endfor %}
 
-    {% if site.about %}
+    {% if site.vision %}
     <div id="about">
-     <strong>about</strong><br />
-     {{ site.about[page.lang] }}
+     <strong>vision</strong><br />
+     {{ site.vision[page.lang] }}
     </div>
     {% endif %}
    </div>
