--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,6 @@
   </div>
    <!-- Placed at the end of the document so the pages load faster -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-   <script src="js/bootstrap.min.js"></script>
+   <script src="/js/bootstrap.min.js"></script>
  </body>
 </html>
